veecle-osal-std-macros/tests/ui/attribute_fail.rs
#[veecle_osal_std_macros::main((trace, foo))]
async fn main() {}
